--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -3,3 +3,22 @@
 */
 
 @import url('./fonts.css');
+
+
+/*
+    RESET
+*/
+
+* {
+    margin:0;
+    padding:0;
+    border:0;
+    box-sizing: border-box
+}
+
+
+/*
+    Actualité
+*/
+
+
