--- a/assets/css/include/header.css
+++ b/assets/css/include/header.css
@@ -3,3 +3,29 @@
 */
 
 @import url('./../fonts.css');
+
+*{
+    box-sizing: border-box;
+}
+
+html{
+    font-size: 62.5%;
+}
+
+nav{
+    background-color: rgb(255, 0, 0);
+    width: 80%;
+    margin-left: 10%;
+    text-align: center;
+}
+
+header a{
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+}
+
+header nav{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
