--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -1,32 +1,44 @@
 @font-face {
     font-family: "Montserrat-Bold";
-    src: url("./../fonts/Montserrat-Bold.ttf") format("ttf");
+    src: url("./../fonts/Montserrat-Bold.ttf");
+    font-weight: normal;
+    font-style: normal;
    }
 
 @font-face {
     font-family: "Montserrat-Light";
-    src: url("./../fonts/Montserrat-Light.ttf") format("ttf");
+    src: url("./../fonts/Montserrat-Light.ttf");
+    font-weight: normal;
+    font-style: normal;
    }
 
 @font-face {
     font-family: "Nunito-Regular";
-    src: url("./../fonts/Nunito-Regular.ttf") format("ttf");
+    src: url("./../fonts/Nunito-Regular.ttf");
+    font-weight: normal;
+    font-style: normal;
    }
 
 
 @font-face {
     font-family: "Nunito-Bold";
-    src: url("./../fonts/Nunito-Bold.ttf") format("ttf");
+    src: url("./../fonts/Nunito-Bold.ttf");
+    font-weight: normal;
+    font-style: normal;
    }
 
 @font-face {
     font-family: "Nunito-Light";
-    src: url("./../fonts/Nunito-Light.ttf") format("ttf");
+    src: url("./../fonts/Nunito-Light.ttf");
+    font-weight: normal;
+    font-style: normal;
    }
 
 @font-face {
     font-family: "Nunito-Regular";
-    src: url("./../fonts/Nunito-Regular.ttf") format("ttf");
+    src: url("./../fonts/Nunito-Regular.ttf");
+    font-weight: normal;
+    font-style: normal;
    }
 
 
