--- a/assets/css/include/header.css
+++ b/assets/css/include/header.css
@@ -26,6 +26,10 @@ header nav{
     align-items: center;
 }
 
+ul{
+    list-style: none;
+}
+
 nav a:hover{
     border-bottom: 3px solid rgb(255, 210, 0);
 }
@@ -33,3 +37,4 @@ nav a:hover{
 nav a:active{
     border-bottom: 3px solid rgb(255, 210, 0);
 }
+
