UPD: Home + Ajout OpenSans + Fix CSS header

--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -6,6 +6,13 @@
    }
 
 @font-face {
+    font-family: "Montserrat-ExtraBold";
+    src: url("./../fonts/Montserrat-ExtraBold.ttf");
+    font-weight: normal;
+    font-style: normal;
+   }
+   
+@font-face {
     font-family: "Montserrat-Light";
     src: url("./../fonts/Montserrat-Light.ttf");
     font-weight: normal;
@@ -41,4 +48,18 @@
     font-style: normal;
    }
 
+@font-face {
+    font-family:"Open-sans-Regular";
+    src: url("./../fonts/OpenSans-Regular.ttf")
+ }
+
+@font-face {
+    font-family:"OpenSans-SemiBold";
+    src: url("./../fonts/OpenSans-SemiBold.ttf")
+ }
+
+ @font-face {
+    font-family:"OpenSans-Bold";
+    src: url("./../fonts/OpenSans-Bold.ttf")
+ }
 
