--- a/assets/css/include/header.css
+++ b/assets/css/include/header.css
@@ -5,14 +5,6 @@
 @import url('./../fonts.css');
 
 
-
-nav{
-    /*background-color: rgb(255, 0, 0);*/
-    width: 70%;
-    margin-left: 15%;
-    text-align: center;
-}
-
 nav a{
     color: rgb(0, 0, 0);
     text-decoration: none;
@@ -21,6 +13,8 @@ nav a{
 }
 
 header nav{
+    margin: 0 auto;
+    width: 60%;
     display: flex;
     justify-content: space-around;
     align-items: center;
