--- a/assets/css/include/header.css
+++ b/assets/css/include/header.css
@@ -20,15 +20,13 @@ header nav{
     align-items: center;
 }
 
-ul{
-    list-style: none;
-}
-
-nav a:hover{
+nav a:not(.logoheader):hover{
     border-bottom: 3px solid rgb(255, 210, 0);
 }
-
-nav a:active{
+/*.menu :hover{
     border-bottom: 3px solid rgb(255, 210, 0);
-}
+}*/
+/*nav a:active{
+    border-bottom: 3px solid rgb(255, 210, 0);
+}*/
 
