--- a/assets/css/include/footer.css
+++ b/assets/css/include/footer.css
@@ -4,41 +4,77 @@
 
 @import url('./../fonts.css');
 
-#footer1 {
+
+#footer1{
     display: flex;
     justify-content: center; 
-    background-color: #38435b; 
+    background-color: #38435b;
 }
 
-#Xavier_1{
-    display:flex; 
-    width: 25%; 
+.content{
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    justify-content: space-around; 
 }
-
-#Jean_Rene{
-    display:flex; 
-    width: 25%; 
-}
-
-h4{
+  
+#Xavier_1 {
+    display: flex;
+    width: 35%;
+    height: 50%; 
+    font-family: "Montserrat-Light";
     color: aliceblue; 
-    font-weight: bold; 
-    font-size: 15px; 
+}
+#Jean_Rene{
+    display: flex;
+    width: 40%;
+    height: 60%;  
+    font-family: "Montserrat-Light";
+    color: aliceblue; 
+}
+
+h4 {
+    color: aliceblue;
+    font-weight: bold;
+    font-size: 13px;
+    display: flex;
+    font-family: 'Montserrat-Bold';
+}
+
+
+.PDG {
+    color: #ffda00;
+}
+
+
+.imagefoot {
+    height: 142%;
+    width: 22%;
+    border: solid 4px #ffda00; 
+    border-radius: 100%; 
+}
+
+
+#footer2{
+    height: 40%;
+    background-color: #2f3749; 
+}
+.para{
+    margin-top: 4%; 
+}
+
+.art_1{
+    margin-left: 4%; 
+    margin-right: 2%; 
+}
+
+.lire_suite{
     display: flex; 
-    justify-content:flex-start; 
-}
-
-p{
-color: aliceblue; 
-display:flex; 
-justify-content: flex-end; 
-}
-
-.PDG{
-    color: #cdb717; 
-}
-
-.texte_case1{
-    display:flex; 
-    flex-direction: column; 
+    border:solid 1px #ffda00; 
+    background-color: transparent; 
+    font-family: "Montserrat-Light";
+    font-size: 10px; 
+    color: aliceblue;
+    justify-content: flex-end; 
+    margin-left: 70%;  
 }
