--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -2,7 +2,8 @@
     margin:0;
     padding:0;
     border:0;
-    box-sizing: border-box
+    box-sizing: border-box;
+    text-decoration: none;
 }
 
 body{
