--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -43,11 +43,15 @@ section:nth-of-type(2n+1) {
 
 .gallery {
     display:flex;
+    display: -webkit-flex;
+        display: -moz-flex;
     align-items: center;
 }
 
 .gallery__left {
     display:flex;
+    display: -webkit-flex;
+        display: -moz-flex;
     flex-wrap:wrap;
     align-items: center;
     
@@ -98,12 +102,16 @@ section:nth-of-type(2n+1) {
 
 .discover__item {
     display: flex;
+    display: -webkit-flex;
+    display: -moz-flex;
     justify-content: space-around;
     align-items: center;
 }
 
 .discover__item figure {
     display: flex;
+    display: -webkit-flex;
+    display: -moz-flex;
     flex-direction: column;
     align-items: center;
 }
@@ -143,6 +151,8 @@ section:nth-of-type(2n+1) {
 
 .horsCourse__item {
     display: flex;
+    display: -webkit-flex;
+    display: -moz-flex;
     justify-content: space-around;
     align-items: center;
 }
@@ -152,6 +162,8 @@ section:nth-of-type(2n+1) {
     width: 240px;
     height: 240px;
     display: flex;
+    display: -webkit-flex;
+    display: -moz-flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -184,6 +196,8 @@ section:nth-of-type(2n+1) {
 
     .--modifier {
         display: flex;
+        display: -webkit-flex;
+        display: -moz-flex;
         justify-content: space-around;
         align-items: center;
         flex: 1;
@@ -191,12 +205,16 @@ section:nth-of-type(2n+1) {
 
     .nextRun {
         display: flex;
+        display: -webkit-flex;
+        display: -moz-flex;
         flex-direction: column;
         
     }
 
     .run {
         display: flex;
+        display: -webkit-flex;
+        display: -moz-flex;
         justify-content: space-between;
         width: 80%;
         margin: 5px 0;
@@ -239,6 +257,8 @@ section:nth-of-type(2n+1) {
 
     .runDescription {
         display: flex;
+        display: -webkit-flex;
+        display: -moz-flex;
         justify-content: space-around;
         align-items: center;
         background-color: #EFEFEF;
@@ -260,12 +280,14 @@ section:nth-of-type(2n+1) {
 
     .pays {
         display: flex;
+        display: -webkit-flex;
+        display: -moz-flex;
         flex-direction: column;
         align-items: center;
     }
 
     .pays img {
-        width: 80%;
+        max-height: 50px;
     }
 
     .pays p {
@@ -279,6 +301,8 @@ section:nth-of-type(2n+1) {
 
     .zoom {
         display:flex;
+        display: -webkit-flex;
+        display: -moz-flex;
         flex-direction: column;
         justify-content: center;
     }
@@ -295,6 +319,7 @@ section:nth-of-type(2n+1) {
 
     .nextRun .link{
         width: 80%;    
+        
     }
 
     .link {
