--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -13,7 +13,7 @@ section:nth-of-type(2n+1) {
 }
 
 .content {
-    width: 95%;
+    width: 90%;
     max-width: 1000px;
     margin: 0 auto; 
     padding: 2.5rem 0;
@@ -28,13 +28,13 @@ section:nth-of-type(2n+1) {
     word-spacing: 5px;    
 }
 
-/* .content h2:after {
+.content h2:before {
     content: "";
     display: block;
     width: 4rem;
     border-top: 3px solid #ffda00;
     padding-top: 10px;
-} */
+}
 
 .content h2 span {
     font-family: "OpenSans-Bold";
