--- a/assets/css/include/footer.css
+++ b/assets/css/include/footer.css
@@ -150,7 +150,7 @@ h4 {
     height: 40%; 
 }
 
-h2{
+footer h2{
     display: flex; 
     flex-direction: row; 
     justify-content: space-between; 
