--- a/assets/css/include/footer.css
+++ b/assets/css/include/footer.css
@@ -11,7 +11,7 @@
     justify-content: space-around;
     align-items: center;
     padding: 2rem 0;
-    
+    background-color: #f0f6ff; 
 }
 
 .contact img {
