maj 29/11 17h01 header+lien team a 90%

--- a/assets/css/include/header.css
+++ b/assets/css/include/header.css
@@ -25,4 +25,8 @@ nav a:not(.logoheader):hover{
     border-bottom: 3px solid rgb(255, 218, 0);
 }
 
+nav a:not(.logoheader):active{
+    border-bottom: 3px solid rgb(255, 218, 0);
+}
+
 
