--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -49,7 +49,7 @@
    }
 
 @font-face {
-    font-family:"Open-sans-Regular";
+    font-family:"OpenSans-Regular";
     src: url("./../fonts/OpenSans-Regular.ttf")
  }
 
