--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -8,10 +8,9 @@
     Actualité
 */
 
-section:nth-of-type(2n+1) {
+.actualite {
     background-color:#f0f6ff;
 }
-
 .content {
     width: 90%;
     max-width: 1000px;
@@ -150,6 +149,10 @@ section:nth-of-type(2n+1) {
 /*
     horsCourse
 */
+
+.horsCourse {
+    background-color:#f0f6ff;
+}
 
 .horsCourse__item {
     display: flex;
