--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -105,7 +105,7 @@
     display: flex;
     display: -webkit-flex;
     display: -moz-flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -193,16 +193,20 @@
 
 .horsCourse__item figure:first-child img {
     width:90%;
+    
 }
 
 .horsCourse__item figure:first-child {
-    position: relative;
+    display: block;
+    position:relative;
+
 }
 
 .horsCourse__item figure:first-child figcaption{
     position: absolute;
-    bottom:0;
     background-color: #575859;
+    width: 90%;
+    bottom: 0;
 }
 
 
