--- a/assets/css/horsCourse.css
+++ b/assets/css/horsCourse.css
@@ -3,3 +3,69 @@
 */
 
 @import url('./fonts.css');
+
+main {
+
+    background: linear-gradient(to bottom, #f0f6ff 24.75%,#ffffff 24.75%);
+    width: 100%;
+}
+
+.content {
+    width: 95%;
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 2.5rem 0;
+}
+
+.firstline {
+    display: flex;
+    display: -webkit-flex;
+    display: -moz-flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.firstline figure {
+    background-color:#ffd500;
+    width: 240px;
+    height: 240px;
+    display: flex;
+    display: -webkit-flex;
+    display: -moz-flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.firstline figcaption {
+    text-align: center;
+    
+}
+
+.firstline figcaption p {
+    font-family: "Nunito-Bold";
+    text-transform: uppercase;
+    font-size: 1.1rem;
+    color: #575859;
+    border-bottom: 3px solid #575859;
+    padding: 10px 0;
+}
+
+.firstline figure {
+    position:relative;
+
+}
+
+.firstline figure figcaption{
+    position: absolute;
+    background-color: #575859;
+    bottom: 10px;
+    right: 10px;
+    left: 10px;;
+}
+
+.firstline figure figcaption p{
+    color:white;
+    font-size: 0.8rem;
+}
