--- a/assets/css/include/header.css
+++ b/assets/css/include/header.css
@@ -19,6 +19,7 @@ header nav{
     display: flex;
     justify-content: space-around;
     align-items: center;
+    padding: 10px;
 }
 
 nav a:not(.logoheader):hover{
