--- a/assets/css/include/footer.css
+++ b/assets/css/include/footer.css
@@ -63,7 +63,18 @@
     margin: 0 auto; 
     padding: 2.5rem 0;
     display: flex;
-    justify-content: space-between; 
+    justify-content: center; 
+}
+
+.content_footer2{
+        width: 95%;
+        max-width: 1000px;
+        margin: 0 auto; 
+        padding: 2.5rem 0;
+        display: flex;
+        justify-content: space-between; 
+
+    
 }
 
 
@@ -88,7 +99,14 @@
     height: 50%; 
     font-family: "Montserrat-Light";
     color: aliceblue; 
-    margin-left: 2%; 
+}
+
+#Jean_Rene{
+    display: flex;
+    width: 35%;
+    height: 50%; 
+    font-family: "Montserrat-Light";
+    color: aliceblue; 
 }
 .imagefoot {
     height: 150%;
@@ -143,7 +161,7 @@ h4 {
     
 }
 
-.content_footer section h2 {
+.content_footer2 section h2 {
     font-family: "Montserrat-ExtraBold";
     font-size: 1rem;
     color: white;
@@ -152,7 +170,7 @@ h4 {
     word-spacing: 5px;  
 }
 
-.content_footer section h2:before {
+.content_footer2 section h2:before {
     content: "";
     display: block;
     width: 3rem;
@@ -160,18 +178,63 @@ h4 {
     padding-top: 10px;
 }
 
-.content_footer section {
+.content_footer2 section {
     display: flex;
     flex-direction: column;
+    width: 40%; 
+    height: 70%;
 }
 
-.content_footer section p {
+.content_footer2 section p {
     font-family: "Nunito-Regular";
     font-size: 0.8rem;
     width:50%;
+}
+
+.content_footer2 img{
+width: 22px; 
+margin: 20%; 
+}
+
+.content_footer2 img[alt~="facebook"]{
+    width:12px; 
+}
+
+.content_footer2 img[alt~="instagram"]{
+    width:18px; 
+}
+
+.reseau{
+    display:flex; 
+    flex-direction: row; 
+    flex-wrap: wrap; 
+}
+
+.top{
+    display:flex; 
+    flex-direction: row; 
+    justify-content: space-between; 
+}
+
+.bottom{
+display:flex; 
+    justify-content: space-between; 
+    flex-direction: column; 
 
 }
 
+input[type="submit"], input[type="email"]{
+    border: solid thin white; 
+    padding: 4%; 
+    background-color:transparent; 
+    margin-top: 3%; 
+    color: white; 
+}
+
+input[type="email"]{
+    width: 45%; 
+    background-color: #3c465f; 
+}
 
 
 /* 
